--- a/src/app.module.css
+++ b/src/app.module.css
@@ -9,8 +9,7 @@ body {
 .app {
 	background-image: url(/src/Components/Assets/homemade-japanese-pork-ramen-noodles-with-eggs-ingredients-black-backdrop_23-2148123639.jpg);
 	background-size: cover;
+	background-repeat: no-repeat;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
-	width: 100vw;
 }
